[package]
name = "ulrig_tui"
version = "0.1.0"
description = "tui frontend for my small shelf inventory management tool"
license = "GPL 3.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
